# django-orm

./: Makefile  README.md  pyproject.toml
django_orm/: settings.py
django_orm/blog/: apps.py  models.py  tests.py
django_orm/blog/migrations/: 0001_initial.py  0002_user_nickname.py  0003_user_password.py  0004_user_last_login.py  0005_alter_postlike_unique_together_and_more.py  0006_island_ship_delete_post_delete_tag.py  0007_tag_remove_ship_islands_post_delete_island_and_more.py  0008_clip_clipdislike_cliplike_delete_post_delete_tag.py  0009_project_remove_clipdislike_clip_worker_and_more.py  0010_tag_remove_worker_project_post_delete_project_and_more.py  0011_author_genre_book_borrow_review_user_borrow_user_and_more.py
django_orm/libruary/: apps.py  models.py  tests.py  views.py
django_orm/libruary/migrations/: 0001_initial.py
django_orm/quote/: apps.py  models.py  tests.py
django_orm/quote/migrations/: 0001_initial.py  0002_quote_approved.py
django_orm/shop/: apps.py  models.py  tests.py
django_orm/shop/migrations/: 0001_initial.py  0002_shoppingcartposition_unique_item.py
