[project]
name = "django-orm"
version = "0.1.0"
description = ""
authors = [
    {name = "NoFate35",email = "vsokol35@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
